fix(Toolbar): use wrap on PredefinedRanges

--- a/src/DatePicker/styles/index.less
+++ b/src/DatePicker/styles/index.less
@@ -43,8 +43,7 @@
   .rs-picker-toolbar {
     max-width: 100%;
 
-    &-ranges.rs-stack {
-      flex-wrap: wrap;
+    &-ranges {
       max-width: 400px;
     }
   }
